# SIEM

./: docker-compose.yml
configs/: vector.yaml
docker/: docker-compose.yml  dockerfile
docs/: zanimivosti
scripts/: log_generator.py  log_generator.py.DEPRECATED  prepare_sandbox.py  seed_data.py
src/dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json  proxy.conf.json
src/dashboard/src/: index.html  styles.css
src/dashboard/src/app/: app.html  app.routes.ts  app.ts
src/python-detection-engine/: .gitignore  README.md  detection_engine.py
src/python-detection-engine/engine/: __init__.py  app.py  config.py  consumers.py  pipeline.py  state.py
src/python-detection-engine/engine/anomaly/: __init__.py  base.py
src/python-detection-engine/engine/catalog/: __init__.py  rule_catalog.py
src/python-detection-engine/engine/evaluation/: __init__.py  ground_truth.py
src/python-detection-engine/engine/rules/: __init__.py  api.py  base.py  correlation.py  cron.py  persistence.py  process.py  web.py  web_payload.py
src/python-detection-engine/engine/schemas/: __init__.py  alerts.py  events.py
src/rust-api/: .gitignore  Cargo.toml  Dockerfile
src/rust-api/src/: config.rs  lib.rs  main.rs  metrics-index-config.yaml  ocsf-index-config.yaml  raw-logs-index-config.yaml  recreate.sh  siem-alerts-config.yaml
src/rust-api/src/consumer/: mod.rs  parquet_worker.rs  worker.rs
src/rust-api/src/handlers/: mod.rs  search.rs
src/rust-api/src/models/: alert.rs  log.rs  mod.rs
src/rust-api/src/services/: mod.rs  parquet.rs  quickwit.rs
(+17 files in other folders)
